tests/bad/include_unsafe/wrong_size.rs
fn main() {}

static TOO_SHORT: [u16; 30] = unsafe { include_data::include_unsafe!("../../test_data/binary_64") };
